<resources>
    <string name="app_name">Caloriyat</string>
    <string name="weight_hint">In kg</string>
    <string name="height_hint">In cm</string>
    <string name="b1_text">How fit am i?</string>
    <string name="m_text">Male</string>
    <string name="fm_text">Female</string>
    <string name="b2_text">How much should i eat?</string>

    <string-array name="age">
        <item>Above 24</item>
        <item>Below 24</item>
    </string-array>
</resources>